# goliath

./: LICENSE  README.md  goliath.cabal
src/: Config.hs  Main.hs  Model.hs  Render.hs
