name:                goliath
version:             0.1.0.0
synopsis:            Game of life in Haskell
description:         Please see README.md
homepage:            https://github.com/simonenkos/goliath#readme
license:             MIT
license-file:        LICENSE
author:              Sergey Simonenko
maintainer:          ssa.simonenko@gmail.com
copyright:           2016 Sergey Simonenko
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable goliath
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       MonadRandom,
                       random,
                       gloss
  other-modules:       Model, Render, Config
